# AxumWithPostgreSQL

./: Cargo.toml  memo.md  tests_run_command.sh
migrations/: 20241107_init.down.sql  20241107_init.up.sql
src/: error.rs  handler.rs  main.rs  route.rs  schema.rs
tests/: api_test.rs
