[package]
name = "postgresql_with_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum
axum = { version = "0.7.2", features = ["macros"] }
tokio = { version = "1.27.0", features = ["full"]}
tower-http = { version = "0.5.0", features = ["cors"] }
#Serde .json
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
# .dotenv
dotenv = "0.15.0"
# SQLx(PostgreSQL)
#sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"]}
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"]}
chrono = {  version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"]}
# Error handling
thiserror = "2.0.3"
# Test
axum-test = "16.3.0"